--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "lodash.sortby": "^4.7.0",
-    "meow": "3.7.0",
     "prefix-suffix": "^0.0.1",
     "random-seed": "0.3.0",
-    "syllable": "2.0.0"
+    "syllable": "2.0.0",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "jest": "19.0.2"
